fixed logo text on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -115,7 +115,7 @@ p:not(:last-of-type) {
   font-weight: 300;
   font-size: 1.6rem;
   line-height: 2.4rem;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.15rem;
   text-transform: uppercase;
   margin-bottom: 3.2rem;
   padding-top: 0.8rem;
@@ -134,26 +134,6 @@ p:not(:last-of-type) {
   letter-spacing: 2px;
 }
 
-@media only screen and (min-width: 320px) {
-  .headline-primary {
-    font-size: 1.6rem;
-  }
-}
-@media only screen and (min-width: 390px) {
-  .headline-primary {
-    font-size: 2rem;
-  }
-}
-@media only screen and (min-width: 465px) {
-  .headline-primary {
-    font-size: 2rem;
-  }
-}
-@media only screen and (min-width: 600px) {
-  .headline-primary {
-    font-size: 3.2rem;
-  }
-}
 .u-center-text {
   text-align: center;
 }
